--- a/brrrr-lib/Cargo.toml
+++ b/brrrr-lib/Cargo.toml
@@ -5,7 +5,7 @@ name = "brrrr-lib"
 version = "0.9.4"
 
 [dependencies]
-bio = {git = "https://github.com/rust-bio/rust-bio"}
+bio = "0.37.1"
 itertools = "0.9.0"
 parquet = "5.2.0"
 arrow = "5.2.0"
