--- a/brrrr-lib/Cargo.toml
+++ b/brrrr-lib/Cargo.toml
@@ -3,6 +3,10 @@ authors = ["Trent Hauck <trent@trenthauck.com>"]
 edition = "2018"
 name = "brrrr-lib"
 version = "0.9.6"
+description = "About Tools to process biological sequences and annotations to modern file formats."
+license = "MIT"
+readme = "../README.md"
+repository = "http://www.github.com/tshauck/brrrr"
 
 [dependencies]
 bio = "0.37.1"
