--- a/brrrr-lib/Cargo.toml
+++ b/brrrr-lib/Cargo.toml
@@ -15,6 +15,7 @@ parquet = "5.2.0"
 arrow = "5.2.0"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
+csv = "1.1"
 
 [dev-dependencies]
 criterion = "0.3"
