feat(cli): change cli to argh vs defunkt clap

--- a/brrrr/Cargo.toml
+++ b/brrrr/Cargo.toml
@@ -10,9 +10,8 @@ path = "src/main.rs"
 
 [dependencies]
 brrrr-lib = {path = "../brrrr-lib"}
-clap = "3.0.0-beta.4"
-clap_generate = {version = "3.0.0-beta.4"}
 bio = "0.37.1"
+argh = "0.1.6"
 
 [dev-dependencies]
 assert_cmd = "1.0.1"
