--- a/brrrr-lib/Cargo.toml
+++ b/brrrr-lib/Cargo.toml
@@ -16,6 +16,8 @@ arrow = "15.0"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 csv = "1.1"
+noodles = {version = "0.25.0", features = ["fasta", "bgzf"]}
+flate2 = "*"
 
 [dev-dependencies]
 criterion = "0.3"
