--- a/brrrr-lib/Cargo.toml
+++ b/brrrr-lib/Cargo.toml
@@ -9,14 +9,13 @@ readme = "../README.md"
 repository = "http://www.github.com/tshauck/brrrr"
 
 [dependencies]
-bio = "0.41"
 itertools = "0.10"
 parquet = "15.0"
 arrow = "15.0"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 csv = "1.1"
-noodles = {version = "0.25.0", features = ["fasta", "bgzf"]}
+noodles = {version = "0.25.0", features = ["fastq", "fasta", "bgzf", "gff"]}
 flate2 = "*"
 
 [dev-dependencies]
