--- a/brrrr-lib/Cargo.toml
+++ b/brrrr-lib/Cargo.toml
@@ -15,7 +15,7 @@ arrow = "15.0"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 csv = "1.1"
-noodles = {version = "0.25.0", features = ["fastq", "fasta", "bgzf", "gff"]}
+noodles = {version = "0.25.0", features = ["core", "fastq", "fasta", "bgzf", "gff"]}
 flate2 = "*"
 
 [dev-dependencies]
