--- a/brrrr-lib/Cargo.toml
+++ b/brrrr-lib/Cargo.toml
@@ -16,7 +16,7 @@ serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 csv = "1.1"
 noodles = {version = "0.25.0", features = ["core", "fastq", "fasta", "bgzf", "gff"]}
-flate2 = "*"
+flate2 = "1.0.24"
 
 [dev-dependencies]
 criterion = {version="0.3", features = ["html_reports"]}
