--- a/brrrr-lib/Cargo.toml
+++ b/brrrr-lib/Cargo.toml
@@ -17,6 +17,7 @@ serde_json = "1.0"
 csv = "1.1"
 noodles = {version = "0.25.0", features = ["core", "fastq", "fasta", "bgzf", "gff"]}
 flate2 = "1.0.24"
+thiserror = "1.0.24"
 
 [dev-dependencies]
 criterion = {version="0.3", features = ["html_reports"]}
